<?xml version="1.0" encoding="utf-8"?>
<resources>
  <string name="appname">NotesTrainer</string>
  <string name="appname_readnotes">NotesTrainer - ReadNotes</string>
  <string name="appname_prefs">NotesTrainer - Preferences</string>
  <string name="start_stop">Start / Stop</string>

  <!-- -->

  <string name="menu_training">Train to read</string>
  <string name="menu_oneminute">1-minute reading test</string>
  <string name="menu_prefs">Preferences</string>

  <!-- -->

  <string name="pref_notation">Music notation</string>
  <string name="pref_notation_english">English (A B C)</string>
  <string name="pref_notation_latin">Latin (do re mi)</string>
  <string name="pref_notation_german">German (A H C)</string>
  <string name="pref_notation_default">english</string>

  <string-array name="pref_notation_entries">
    <item>@string/pref_notation_english</item>
    <item>@string/pref_notation_latin</item>
    <item>@string/pref_notation_german</item>
  </string-array>
  <string-array name="pref_notation_values">
    <item>english</item>
    <item>latin</item>
    <item>german</item>
  </string-array>

  <!-- -->

  <string name="pref_clef">Clef</string>
  <string name="pref_clef_g2">Treble (G on 2nd line)</string>
  <string name="pref_clef_f4">Bass (F on 4th line)</string>
  <string name="pref_clef_c3">Alto (C on 3rd line)</string>
  <string name="pref_clef_c4">Tenor (C on 4th line)</string>
  <string name="pref_clef_default">g2</string>

  <string-array name="pref_clef_entries">
    <item>@string/pref_clef_g2</item>
    <item>@string/pref_clef_f4</item>
    <item>@string/pref_clef_c3</item>
    <item>@string/pref_clef_c4</item>
  </string-array>
  <string-array name="pref_clef_values">
    <item>g2</item>
    <item>f4</item>
    <item>c3</item>
    <item>c4</item>
  </string-array>

  <!-- -->

  <string name="pref_minnote">Lowest note</string>
  <string name="pref_minnote_summary">lower bound for generated notes</string>
  <string name="pref_maxnote">Highest note</string>
  <string name="pref_maxnote_summary">upper bound for generated notes</string>

</resources>
